Adding routine for conversion string to double